backend/tests/golden/queries/positive/09_function_in_where/query.sdbl
ВЫБРАТЬ
    Ссылка
ИЗ
    Документ.АвансовыйОтчет
ГДЕ
    ГОД(Дата) = 2025
