backend/tests/golden/queries/negative/09_group_by_simple/query.sdbl
ВЫБРАТЬ
    Контрагент,
    КОЛИЧЕСТВО(*) КАК ЧислоДок
ИЗ
    Документ.АвансовыйОтчет
СГРУППИРОВАТЬ ПО
    Контрагент
